--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   node:
-    image: node:latest
+    image: node:16-bullseye-slim
     container_name: skeleton_node
     tty: true
     working_dir: /skeleton
